Profile page added, few changes to css to handel form label overflow

--- a/public/assignment/css/dashboard.css
+++ b/public/assignment/css/dashboard.css
@@ -115,3 +115,8 @@ body {
 .navbar-inverse .navbar-toggle .icon-bar {
   background-color: #9dd0ff;
 }
+
+.control-label {
+  white-space:nowrap;
+  direction: rtl;
+}
