Admin page added. Few addition to the stylesheet to make things work nicely

--- a/public/assignment/css/dashboard.css
+++ b/public/assignment/css/dashboard.css
@@ -120,3 +120,11 @@ body {
   white-space:nowrap;
   direction: rtl;
 }
+
+.navbar-right li:hover {
+  color: #ffffff;
+}
+
+.button-pair {
+  min-width:100px;
+}
