Forms page added, and slight css change to make the buttons in a table fixed width

--- a/public/assignment/css/dashboard.css
+++ b/public/assignment/css/dashboard.css
@@ -126,5 +126,11 @@ body {
 }
 
 .button-pair {
-  min-width:100px;
+  width:100px;
+}
+
+.panel-tab-top {
+  border-top-left-radius:0px;
+  border-top-right-radius:0px;
+  border-top:none;
 }
