Changed the toolbar to a dropdown menu toolbar and removed the bottom bar

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -4,7 +4,6 @@
     margin-right:0px;
 }
 
-.alxe-toolbar-fixed {
-    position:fixed;
-    z-index: 10000000;
+.alxe-toolbar-withlefticon {
+    padding-left:0;
 }
