Some fixes to the website list, added a few more examples too. Work on the new website page. One issue that needs to be revisited is angular material does not currently properly handle textarea and its number of rows. Hopefully that will be fixed in the next update...

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -11,3 +11,13 @@
 .alxe-card-img {
     height:auto!important;
 }
+
+.alxe-textarea-3row {
+    height:110px!important;
+}
+
+.alxe-button-image {
+    border-radius:0;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+}
