--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -22,7 +22,18 @@
     margin: 0 0 0 0;
 }
 
+.alxe-widget {
+
+}
+
+.alxe-widget>img {
+    width:100%;
+    height:auto;
+}
+
 .alxe-widget-menu {
     position:absolute;
     right:0px;
+    background:white;
+    border-bottom-left-radius: 5px;
 }
