WebsiteEditCtrl complete! Also reworked the page titles up to the page directory

--- a/public/assignment/partials/page/edit.html
+++ b/public/assignment/partials/page/edit.html
@@ -30,7 +30,7 @@
                     </md-menu-content>
                 </md-menu>
                 <h1 class="md-headline">
-                    <span>.{title}} > .{page}} > Edit</span>
+                    <span>{{ctrl.website.name}} > {{ctrl.page.name}} > Edit</span>
                 </h1>
                 <span flex></span>
             </div>
