--- a/public/assignment/partials/website/edit.html
+++ b/public/assignment/partials/website/edit.html
@@ -30,24 +30,26 @@
                     </md-menu-content>
                 </md-menu>
                 <h1 class="md-headline">
-                    <span>Edit {{title}}</span>
+                    <span>Edit {{ctrl.website.name}}</span>
                 </h1>
                 <span flex></span>
             </div>
         </md-toolbar>
         <md-content flex class="md-padding">
-            <form name="newsite">
+            <form name="newsite" ng-submit="ctrl.save()">
                 <md-input-container class="md-block">
-                    <label>Title</label>
-                    <input type="text" name="title" ng-model="$scope.tempTitle">
+                    <label>Name</label>
+                    <input type="text" name="Name" ng-blur="ctrl.validateName()" ng-model="ctrl.website.name">
+                    <div ng-messages ng-show="ctrl.nameWarning">
+                        <div ng-message>{{ctrl.nameWarning}}</div>
+                    </div>
                 </md-input-container>
                 <md-input-container class="md-block">
                     <label>Description</label>
-                    <textarea ng-model="$scope.tempDesc" class="alxe-textarea-3row"></textarea>
+                    <textarea ng-model="ctrl.website.description" class="alxe-textarea-3row"></textarea>
                 </md-input-container>
-                <md-button class="md-primary md-raised alxe-button-wide"
-                           href="#/websites/web1">Save</md-button>
-                <md-button class="md-warn alxe-button-wide" href="#/sites">Cancel</md-button>
+                <md-button type="submit" class="md-primary md-raised alxe-button-wide">Save</md-button>
+                <md-button class="md-warn alxe-button-wide" ng-href="#/user/{{ctrl.userId}}/website">Cancel</md-button>
             </form>
         </md-content>
     </md-content>
