--- a/public/assignment/partials/page/list.html
+++ b/public/assignment/partials/page/list.html
@@ -2,20 +2,20 @@
     <md-content layout="column" layout-fill>
         <md-toolbar>
             <div class="md-toolbar-tools alxe-toolbar-withlefticon">
-                <md-menu ng-controller="MenuCtrl as ctrl" md-offset="0 40">
+                <md-menu ng-controller="MenuCtrl as menu" md-offset="0 40">
                     <md-button aria-label="Open menu" class="md-icon-button"
-                               ng-click="ctrl.openMenu($mdOpenMenu, $event)">
+                               ng-click="menu.openMenu($mdOpenMenu, $event)">
                         <md-icon md-menu-origin>menu</md-icon>
                     </md-button>
                     <md-menu-content width="4">
                         <md-menu-item>
-                            <md-button href="#/profile">
+                            <md-button ng-href="#/user/{{ctrl.userId}}">
                                 <md-icon>person</md-icon>
                                 Profile
                             </md-button>
                         </md-menu-item>
                         <md-menu-item>
-                            <md-button href="#/sites">
+                            <md-button ng-href="#/user/{{ctrl.userId}}/website">
                                 <md-icon>apps</md-icon>
                                 Websites
                             </md-button>
@@ -30,13 +30,9 @@
                     </md-menu-content>
                 </md-menu>
                 <h1 class="md-headline">
-                    <span>.{title}} > Pages</span>
+                    <span>{{ctrl.website.name}} > Pages</span>
                 </h1>
                 <span flex></span>
-                <md-button class="md-icon-button" aria-label="Add Page"
-                           href="#/websites/web1/new-page">
-                    <md-icon>add</md-icon>
-                </md-button>
             </div>
         </md-toolbar>
         <md-content flex class="md-padding" layout-xs="column" layout="row">
