Added the page service and added website delete functionality

--- a/public/assignment/partials/website/list.html
+++ b/public/assignment/partials/website/list.html
@@ -61,7 +61,8 @@
                         </p>
                     </md-card-content>
                     <md-card-actions layout="row" layout-align="center">
-                        <md-button class="md-icon-button md-warn" aria-label="Delete">
+                        <md-button class="md-icon-button md-warn" aria-label="Delete"
+                                   ng-click="ctrl.delete(site._id)">
                             <md-icon>delete</md-icon>
                         </md-button>
                         <span flex></span>
