--- a/public/assignment/partials/page/list.html
+++ b/public/assignment/partials/page/list.html
@@ -30,111 +30,44 @@
                     </md-menu-content>
                 </md-menu>
                 <h1 class="md-headline">
-                    <span>{{ctrl.website.name}} > Pages</span>
+                    <span>{{ctrl.websiteName}} > Pages</span>
                 </h1>
                 <span flex></span>
+                <md-button class="md-icon-button" aria-label="Add Page"
+                           ng-href="#/user/{{ctrl.userId}}/website/{{ctrl.websiteId}}/page/new">
+                    <md-icon>add</md-icon>
+                </md-button>
             </div>
         </md-toolbar>
         <md-content flex class="md-padding" layout-xs="column" layout="row">
-            <div flex-xs="noshrink" flex-gt-xs="50" layout="column">
-                <md-card flex="none">
-                    <md-button href="#/websites/web1/page1" class="alxe-button-image"
-                               aria-label="Page1">
+            <div flex-xs="noshrink" flex-gt-xs="{{100 / ctrl.columns}}" layout="column"
+                 ng-repeat="column in ctrl.pagesArray">
+                <md-card flex="none" ng-repeat="page in column">
+                    <md-button ng-href="#/user/{{ctrl.userId}}/website/{{ctrl.websiteId}}/page/{{page._id}}/widget"
+                               class="alxe-button-image"
+                               aria-label="Edit Widgets">
                         <img ng-src="./img/temporary/website-ng.PNG"
                              class="md-card-image alxe-card-img"
-                             alt="Washed Out">
+                             alt="{{page.name}}">
                     </md-button>
                     <md-card-title>
                         <md-card-title-text>
-                            <span class="md-headline">Front Page</span>
+                            <span class="md-headline">{{page.name}}</span>
                         </md-card-title-text>
                     </md-card-title>
-                    <md-card-content>
+                    <md-card-content ng-show="page.description">
                         <p>
-                            The titles of Washed Out's breakthrough song and the first single from
-                            Paracosm share the
-                            two most important words in Ernest Greene's musical language: feel it.
-                            It's a simple request, as well...
+                            {{page.description}}
                         </p>
                     </md-card-content>
                     <md-card-actions layout="row" layout-align="center">
-                        <md-button class="md-icon-button md-warn" aria-label="Delete">
+                        <md-button class="md-icon-button md-warn" aria-label="Delete"
+                                   ng-click="ctrl.delete(page._id)">
                             <md-icon>delete</md-icon>
                         </md-button>
                         <span flex></span>
                         <md-button class="md-icon-button" aria-label="Edit"
-                                   href="#/websites/web1/page1/edit">
-                            <md-icon>settings</md-icon>
-                        </md-button>
-                    </md-card-actions>
-                </md-card>
-                <md-card flex="none">
-                    <md-button href="#/websites/web1/page1" class="alxe-button-image"
-                               aria-label="Page1">
-                        <img ng-src="./img/temporary/website-ng.PNG"
-                             class="md-card-image alxe-card-img"
-                             alt="Washed Out">
-                    </md-button>
-                    <md-card-title>
-                        <md-card-title-text>
-                            <span class="md-headline">Front Page</span>
-                        </md-card-title-text>
-                    </md-card-title>
-                    <md-card-actions layout="row" layout-align="center">
-                        <md-button class="md-icon-button md-warn" aria-label="Delete">
-                            <md-icon>delete</md-icon>
-                        </md-button>
-                        <span flex></span>
-                        <md-button class="md-icon-button" aria-label="Edit"
-                                   href="#/websites/web1/page1/edit">
-                            <md-icon>settings</md-icon>
-                        </md-button>
-                    </md-card-actions>
-                </md-card>
-            </div>
-            <div flex-xs="noshrink" flex-gt-xs="50" layout="column">
-                <md-card flex="none">
-                    <md-button href="#/websites/web1/page1" class="alxe-button-image"
-                               aria-label="Page1">
-                        <img ng-src="./img/temporary/website-ng.PNG"
-                             class="md-card-image alxe-card-img"
-                             alt="Washed Out">
-                    </md-button>
-                    <md-card-title>
-                        <md-card-title-text>
-                            <span class="md-headline">Front Page</span>
-                        </md-card-title-text>
-                    </md-card-title>
-                    <md-card-actions layout="row" layout-align="center">
-                        <md-button class="md-icon-button md-warn" aria-label="Delete">
-                            <md-icon>delete</md-icon>
-                        </md-button>
-                        <span flex></span>
-                        <md-button class="md-icon-button" aria-label="Edit"
-                                   href="#/websites/web1/page1/edit">
-                            <md-icon>settings</md-icon>
-                        </md-button>
-                    </md-card-actions>
-                </md-card>
-                <md-card flex="none">
-                    <md-button href="#/websites/web1/page1" class="alxe-button-image"
-                               aria-label="Page1">
-                        <img ng-src="./img/temporary/website-ng.PNG"
-                             class="md-card-image alxe-card-img"
-                             alt="Washed Out">
-                    </md-button>
-                    <md-card-title>
-                        <md-card-title-text>
-                            <span class="md-headline">Front Page</span>
-                        </md-card-title-text>
-                    </md-card-title>
-                    <md-card-actions layout="row" layout-align="center">
-                        <md-button class="md-icon-button md-warn" aria-label="Delete">
-                            <md-icon>delete</md-icon>
-                        </md-button>
-                        <span flex></span>
-                        <md-button class="md-icon-button" aria-label="Edit"
-                                   href="#/websites/web1/page1/edit">
+                                   ng-href="#/user/{{ctrl.userId}}/website/{{site._id}}/page/{{page._id}}">
                             <md-icon>settings</md-icon>
                         </md-button>
                     </md-card-actions>
