--- a/public/assignment/partials/page/new.html
+++ b/public/assignment/partials/page/new.html
@@ -30,24 +30,33 @@
                     </md-menu-content>
                 </md-menu>
                 <h1 class="md-headline">
-                    <span>{{ctrl.website.name}} > New Page}}</span>
+                    <span>{{ctrl.websiteName}} > New Page</span>
                 </h1>
                 <span flex></span>
             </div>
         </md-toolbar>
         <md-content flex class="md-padding">
-            <form name="newpage">
+            <form name="newpage" ng-submit="ctrl.save()">
                 <md-input-container class="md-block">
                     <label>Name</label>
-                    <input type="text" name="name" ng-model="$scope.tempName">
+                    <input type="text" name="name" ng-blur="ctrl.validateName()" ng-model="ctrl.name">
+                    <div ng-messages ng-show="ctrl.nameWarning">
+                        <div ng-message>{{ctrl.nameWarning}}</div>
+                    </div>
                 </md-input-container>
                 <md-input-container class="md-block">
                     <label>Title</label>
-                    <input type="text" name="title" ng-model="$scope.tempTitle">
+                    <input type="text" name="title" ng-model="ctrl.title">
                 </md-input-container>
-                <md-button class="md-primary md-raised alxe-button-wide"
-                           href="#/websites/web1/page1">Save</md-button>
-                <md-button class="md-warn alxe-button-wide" href="#/websites/web1">Cancel</md-button>
+                <md-input-container class="md-block">
+                    <label>Description</label>
+                    <textarea ng-model="ctrl.description" class="alxe-textarea-3row"></textarea>
+                </md-input-container>
+                <md-button type="submit" class="md-primary md-raised alxe-button-wide">Save
+                </md-button>
+                <md-button class="md-warn alxe-button-wide"
+                           href="#/user/{{ctrl.userId}}/website/{{ctrl.websiteId}}/page">Cancel
+                </md-button>
             </form>
         </md-content>
     </md-content>
