--- a/public/assignment/partials/page/list.html
+++ b/public/assignment/partials/page/list.html
@@ -68,7 +68,7 @@
                         </md-button>
                         <span flex></span>
                         <md-button class="md-icon-button" aria-label="Edit"
-                                   ng-href="#/user/{{ctrl.userId}}/website/{{site._id}}/page/{{page._id}}">
+                                   ng-href="#/user/{{ctrl.userId}}/website/{{ctrl.websiteId}}/page/{{page._id}}">
                             <md-icon>settings</md-icon>
                         </md-button>
                     </md-card-actions>
