--- a/public/assignment/partials/widget/list.html
+++ b/public/assignment/partials/widget/list.html
@@ -2,20 +2,20 @@
     <md-content layout="column" layout-fill>
         <md-toolbar>
             <div class="md-toolbar-tools alxe-toolbar-withlefticon">
-                <md-menu ng-controller="MenuCtrl as ctrl" md-offset="0 40">
+                <md-menu ng-controller="MenuCtrl as menu" md-offset="0 40">
                     <md-button aria-label="Open menu" class="md-icon-button"
-                               ng-click="ctrl.openMenu($mdOpenMenu, $event)">
+                               ng-click="menu.openMenu($mdOpenMenu, $event)">
                         <md-icon md-menu-origin>menu</md-icon>
                     </md-button>
                     <md-menu-content width="4">
                         <md-menu-item>
-                            <md-button href="#/profile">
+                            <md-button ng-href="#/user/{{ctrl.userId}}">
                                 <md-icon>person</md-icon>
                                 Profile
                             </md-button>
                         </md-menu-item>
                         <md-menu-item>
-                            <md-button href="#/sites">
+                            <md-button ng-href="#/user/{{ctrl.userId}}/website">
                                 <md-icon>apps</md-icon>
                                 Websites
                             </md-button>
@@ -30,17 +30,17 @@
                     </md-menu-content>
                 </md-menu>
                 <h1 class="md-headline">
-                    <span>.{title}} > .{pagename}}</span>
+                    <span>{{ctrl.websiteName}} > {{ctrl.pageName}}</span>
                 </h1>
                 <span flex></span>
                 <md-button class="md-icon-button" aria-label="Add Widget"
-                           href="#/websites/web1/page1/new-widget">
+                           ng-href="#/user/{{ctrl.userId}}/website/{{ctrl.websiteId}}/page/{{ctrl.pageId}}/widget/new">
                     <md-icon>add</md-icon>
                 </md-button>
             </div>
         </md-toolbar>
         <md-content flex class="md-padding" layout="column">
-            <div class="alxe-widget">
+            <div class="alxe-widget" ng-repeat="widget in ctrl.widgets" ng-switch="widget.widgetType">
                 <div class="alxe-widget-menu" layout="row">
                     <md-button href="#/websites/web1/page1/header" class="md-icon-button">
                         <md-icon>settings</md-icon>
@@ -49,90 +49,23 @@
                         <md-icon>drag_handle</md-icon>
                     </md-button>
                 </div>
-                <h1 class="md-display-2">Angular Material</h1>
-            </div>
-            <div class="alxe-widget">
-                <div class="alxe-widget-menu" layout="row">
-                    <md-button href="#/websites/web1/page1/header" class="md-icon-button">
-                        <md-icon>settings</md-icon>
-                    </md-button>
-                    <md-button class="md-icon-button">
-                        <md-icon>drag_handle</md-icon>
-                    </md-button>
+                <div ng-switch-when="HEADER" ng-switch="widget.size">
+                    <h1 ng-switch-default>{{widget.text}}</h1>
+                    <h2 ng-switch-when="2">{{widget.text}}</h2>
+                    <h3 ng-switch-when="3">{{widget.text}}</h3>
+                    <h4 ng-switch-when="4">{{widget.text}}</h4>
+                    <h5 ng-switch-when="5">{{widget.text}}</h5>
                 </div>
-                <h2 class="md-headline">Angular Material is a reference implementation of Google's
-                    Material Design Specification.</h2>
-            </div>
-            <div class="alxe-widget">
-                <div class="alxe-widget-menu" layout="row">
-                    <md-button href="#/websites/web1/page1/image" class="md-icon-button">
-                        <md-icon>settings</md-icon>
-                    </md-button>
-                    <md-button class="md-icon-button">
-                        <md-icon>drag_handle</md-icon>
-                    </md-button>
+                <div ng-switch-when="IMAGE">
+                    <img src="{{widget.url}}"
+                         width="{{widget.width}}"
+                         class="md-card-image alxe-card-img">
                 </div>
-                <img ng-src="./img/temporary/pretty.png"
-                     class="md-card-image alxe-card-img"
-                     alt="Washed Out">
-            </div>
-            <div class="alxe-widget">
-                <div class="alxe-widget-menu" layout="row">
-                    <md-button href="#/websites/web1/page1/html" class="md-icon-button">
-                        <md-icon>settings</md-icon>
-                    </md-button>
-                    <md-button class="md-icon-button">
-                        <md-icon>drag_handle</md-icon>
-                    </md-button>
-                </div>
-                <p>When a developer needs to put more than just a text label in the md-select-menu,
-                    they should use the md-select-header. The user can put custom HTML inside of the
-                    header and style it to their liking. One common use case of this would be a
-                    sticky search bar.</p>
-            </div>
-            <div class="alxe-widget">
-                <div class="alxe-widget-menu" layout="row">
-                    <md-button href="#/websites/web1/page1/header" class="md-icon-button">
-                        <md-icon>settings</md-icon>
-                    </md-button>
-                    <md-button class="md-icon-button">
-                        <md-icon>drag_handle</md-icon>
-                    </md-button>
-                </div>
-                <h2 class="md-headline">You want a video? Of course! Everyone loves videos!</h2>
-            </div>
-            <div class="alxe-widget">
-                <div class="alxe-widget-menu" layout="row">
-                    <md-button href="#/websites/web1/page1/video" class="md-icon-button">
-                        <md-icon>settings</md-icon>
-                    </md-button>
-                    <md-button class="md-icon-button">
-                        <md-icon>drag_handle</md-icon>
-                    </md-button>
-                </div>
-                <div class="alxe-widget-video">
-                    <iframe src="https://www.youtube.com/embed/rrT6v5sOwJg"
+                <div ng-switch-when="YOUTUBE" class="alxe-widget-video">
+                    <iframe src="{{widget.url}}"
+                            width="{{widget.width}}"
                             frameborder="0" allowfullscreen></iframe>
                 </div>
-            </div>
-            <div class="alxe-widget">
-                <div class="alxe-widget-menu" layout="row">
-                    <md-button href="#/websites/web1/page1/html" class="md-icon-button">
-                        <md-icon>settings</md-icon>
-                    </md-button>
-                    <md-button class="md-icon-button">
-                        <md-icon>drag_handle</md-icon>
-                    </md-button>
-                </div>
-                <p>
-                    A behind-the-scenes look at building Google's visual framework. Find out more
-                    about material design at www.google.com/design. Today at #io15 the
-                    #materialdesign team gave a couple talks about lessons learned from the first
-                    year of #materialdesign. For those of you who missed the session, you can still
-                    get a behind-the-scenes look at the making of #materialdesign. Learn more about
-                    the philosophy behind the system as well as first-hand accounts from a few of
-                    the designers on the team.
-                </p>
             </div>
         </md-content>
 </div>
