--- a/public/assignment/partials/widget/new.html
+++ b/public/assignment/partials/widget/new.html
@@ -2,20 +2,20 @@
     <md-content layout="column" layout-fill>
         <md-toolbar>
             <div class="md-toolbar-tools alxe-toolbar-withlefticon">
-                <md-menu ng-controller="MenuCtrl as ctrl" md-offset="0 40">
+                <md-menu ng-controller="MenuCtrl as menu" md-offset="0 40">
                     <md-button aria-label="Open menu" class="md-icon-button"
-                               ng-click="ctrl.openMenu($mdOpenMenu, $event)">
+                               ng-click="menu.openMenu($mdOpenMenu, $event)">
                         <md-icon md-menu-origin>menu</md-icon>
                     </md-button>
                     <md-menu-content width="4">
                         <md-menu-item>
-                            <md-button href="#/profile">
+                            <md-button ng-href="#/user/{{ctrl.userId}}">
                                 <md-icon>person</md-icon>
                                 Profile
                             </md-button>
                         </md-menu-item>
                         <md-menu-item>
-                            <md-button href="#/sites">
+                            <md-button ng-href="#/user/{{ctrl.userId}}/website">
                                 <md-icon>apps</md-icon>
                                 Websites
                             </md-button>
@@ -30,50 +30,50 @@
                     </md-menu-content>
                 </md-menu>
                 <h1 class="md-headline">
-                    <span>.{title}} > .{pagename}} > New Widget</span>
+                    <span>{{ctrl.websiteName}} > {{ctrl.pageName}} > New Widget</span>
                 </h1>
                 <span flex></span>
             </div>
         </md-toolbar>
         <md-content flex class="md-padding" layout="column">
             <md-list class="alxe-list">
-                <md-list-item href="#/websites/web1/page1/header">
+                <md-list-item ng-click="ctrl.new('HEADER')">
                     <p>Header</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
-                <md-list-item href="#/websites/web1/page1/label">
+                <md-list-item>
                     <p>Label</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
-                <md-list-item href="#/websites/web1/page1/html">
+                <md-list-item>
                     <p>HTML</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
-                <md-list-item href="#/websites/web1/page1/text-input">
+                <md-list-item>
                     <p>Text Input</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
-                <md-list-item href="#/websites/web1/page1/link">
+                <md-list-item>
                     <p>Link</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
-                <md-list-item href="#/websites/web1/page1/button">
+                <md-list-item>
                     <p>Button</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
-                <md-list-item href="#/websites/web1/page1/image">
+                <md-list-item ng-click="ctrl.new('IMAGE')">
                     <p>Image</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
-                <md-list-item href="#/websites/web1/page1/video">
+                <md-list-item ng-click="ctrl.new('YOUTUBE')">
                     <p>YouTube Video</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
-                <md-list-item href="#/websites/web1/page1/table">
+                <md-list-item>
                     <p>Data table</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
-                <md-list-item href="#/websites/web1/page1/repeater">
+                <md-list-item>
                     <p>Repeater</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
